--- a/.github/workflows/pr-agent.yml
+++ b/.github/workflows/pr-agent.yml
@@ -16,8 +16,8 @@ jobs:
         uses: qodo-ai/pr-agent@main
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GTH }}
-          config.model: "gemini/gemini-1.5-pro"
-          config.fallback_models: '["gemini/gemini-1.5-pro"]'
+          config.model: "gemini/gemini-pro"
+          config.fallback_models: '["gemini/gemini-pro"]'
           GOOGLE_AI_STUDIO.GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           github_action_config.auto_review: "true"
           github_action_config.auto_describe: "true"
