--- a/.github/workflows/pr-agent.yml
+++ b/.github/workflows/pr-agent.yml
@@ -1,4 +1,4 @@
-name: PR Agent (Gemini)
+name: PR Agent (Gemini with OpenAI Fallback)
 on:
   pull_request:
     types: [opened, reopened, ready_for_review]
@@ -17,8 +17,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GTH }}
           config.model: "gemini/gemini-pro"
-          config.fallback_models: '["gemini/gemini-pro"]'
+          config.fallback_models: '["gpt-4o-mini", "gpt-3.5-turbo"]'
           GOOGLE_AI_STUDIO.GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           github_action_config.auto_review: "true"
           github_action_config.auto_describe: "true"
           github_action_config.auto_improve: "true"
